fix: Header / Footer / Layout (6-8h) | close submenu on touchscreens on click outside of dropdown menu | https://markupus.kaiten.io/space/32418/card/2545025 | Homepage (14-18h) | remove flex-wrap | https://markupus.kaiten.io/space/32418/card/2545160

--- a/wp-content/themes/gfx/modules/testimonials_carousel/testimonials_carousel.scss
+++ b/wp-content/themes/gfx/modules/testimonials_carousel/testimonials_carousel.scss
@@ -37,7 +37,6 @@
 
     .slick-track {
       display: flex;
-      flex-wrap: wrap;
     }
 
     .item {
